Refactor table drawing logic in DataFrame.java